app frontend logic

--- a/views/layout.html
+++ b/views/layout.html
@@ -45,8 +45,8 @@
 		{%- endfor %}
 
 	{% else %}
-		<script src="/js/plugins.packed.js"></script>
-		<script src="/js/app.packed.js"></script>
+		<script src="/js/packed/plugins.js"></script>
+		<script src="/js/packed/app.js"></script>
 	{% endif %}
 	
 </body>
