--- a/public/css/IE.less
+++ b/public/css/IE.less
@@ -1,6 +1,6 @@
-@import "other/functions.less";
-@import "other/normalize.less";
-@import "other/main.less";
-@import "devices/mobile.less";
-@import "devices/tablet.less";
-@import "devices/desktop.less";
+@import "base/functions.less";
+@import "base/normalize.less";
+@import "base/main.less";
+@import "responsive/mobile.less";
+@import "responsive/tablet.less";
+@import "responsive/desktop.less";
