--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,11 +1,11 @@
-@import "other/functions.less";
-@import "other/normalize.less";
-@import "other/main.less";
-@import "devices/mobile.less";
+@import "base/functions.less";
+@import "base/normalize.less";
+@import "base/main.less";
+@import "responsive/mobile.less";
 
 @media only screen and (min-width: 569px) {
-  @import "devices/tablet.less";
+  @import "responsive/tablet.less";
 }
 @media only screen and (min-width: 1025px) {
-  @import "devices/desktop.less";
+  @import "responsive/desktop.less";
 }
