--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -5,48 +5,41 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <html>
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width">
 	<title>{% block title %}My Site{% endblock %}</title>
 
-  {% block head %}
-		<!--[if (gte IE 9)|!(IE)]><!-->
-			<link rel="stylesheet" href="/css/style.css">
-		<!--<![endif]-->
-		<!--[if (lt IE 9)]>
-			<link rel="stylesheet" href="/css/IE.css">
-		<![endif]-->
-  {% endblock %}
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<!--[if (gte IE 9)|!(IE)]><!-->
+		<link rel="stylesheet" href="/css/style.css">
+	<!--<![endif]-->
+	<!--[if (lt IE 9)]>
+		<link rel="stylesheet" href="/css/IE.css">
+	<![endif]-->
+
+	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+	<script>window.Modernizr || document.write('<script src="/js/libraries/modernizr-2.6.2.min.js"><\/script>')</script>
 </head>
 <body>
 	<!--[if lt IE 8]>
 			<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	<![endif]-->
 	<div role="main" id="main">
-  	{% block content %}{% endblock %}
+		{% block content %}{% endblock %}
 	</div>
 
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="/js/libraries/jquery.1.9.0.min.js"><\/script>')</script>
 
-	{% if enviroment == 'development' %}
-		<!-- app plugins -->
-		{% for resource in resources.plugins -%}
-				<script src="{{ resource }}"></script>
-		{%- endfor %}
+	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0/lodash.min.js"></script>
+	<script>window._ || document.write('<script src="/js/libraries/lodash.1.0.0.min.js"><\/script>')</script>
 
-		<!-- app logic -->
-		{% for resource in resources.app -%}
-				<script src="{{ resource }}"></script>
-		{%- endfor %}
-	{% else %}
-		<script src="/js/packed/plugins.js"></script>
-		<script src="/js/packed/app.js"></script>
-	{% endif %}
+	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.string/2.3.0/underscore.string.min.js"></script>
+	<script>window._.str || document.write('<script src="/js/libraries/underscore.string.2.3.0.min.js"><\/script>')</script>
+
+	<script src="/js/app.packed.js"></script>
 	
 </body>
 </html>
